--- a/css/css.css
+++ b/css/css.css
@@ -23,3 +23,17 @@
     height: 100%;
     object-fit: cover;
 }
+
+.main{
+    padding-bottom: 20px;
+}
+
+.carousel-caption{
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+    background-color: #777476;
+    color: white;
+    border-radius: 35%;
+    opacity: 0.7;
+}
